@@ -9,8 +9,8 @@ import yaml
 ##### Snakemake miRNA pipeline #####
 ##### Daniel Fischer (daniel.fischer@luke.fi)
 ##### Natural Resources Institute Finland (Luke)
-##### Version: 0.5.7
-version = "0.5.7"
+##### Version: 0.5.14
+version = "0.5.14"
 
 ##### set minimum snakemake version #####
 min_version("6.0")
