@@ -108,9 +108,9 @@ bowtie_map_clear_reads_mature:
 
 bowtie_map_clear_reads_reference:
     job-name: bowtie_map_clear_reads_reference
-    time: 200
-    cpus-per-task: 5
-    mem-per-cpu: 4000
+    time: 50
+    cpus-per-task: 2
+    mem-per-cpu: 2000
 
 bowtie_map_nonmature_reads_hairpin:
     job-name: bowtie_map_nonmature_reads_hairpin
@@ -120,9 +120,9 @@ bowtie_map_nonmature_reads_hairpin:
 
 star_map_clear_reads_mature:
     job-name: star_map_clear_reads_mature
-    time: 100
-    cpus-per-task: 5
-    mem-per-cpu: 4000
+    time: 50
+    cpus-per-task: 2
+    mem-per-cpu: 2000
     
 star_map_clear_reads_hairpin:
     job-name: star_map_clear_reads_hairpin
