@@ -7,6 +7,7 @@
 
 0.5.* UPDATES
 --------------------------------------------------------------------------------
+14: stdout and stderr are now redirected to CUTADAPT log files
 13: STAR indices are not created in groups anymore
 12: Quantification is now also grouped
 11: Preprocessing is done in a single group now
